--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -38,7 +38,7 @@
                                         </div><button class="btn btn-primary d-block btn-user w-100" type="submit">Login</button>
                                         <br />
                                     </form>
-                                    <div class="text-center"><a class="small" href="register.html">No account? Create one here!</a></div>
+                                    <div class="text-center"><a class="small" href="/user/register">No account? Create one here!</a></div>
                                 </div>
                             </div>
                         </div>
