--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -28,7 +28,6 @@
                     <li class="nav-item"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>&nbsp;Analytics</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/investment"><i class="fas fa-dollar-sign"></i><span>&nbsp;Investments</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;Profile</span></a>
-                    <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-user-circle"></i><span>&nbsp;Logout</span></a>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
@@ -52,7 +51,7 @@
             
             <div class="d-none d-sm-block topbar-divider"></div>
             <li class="nav-item dropdown no-arrow">
-                <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="/logout"><span class="d-none d-lg-inline me-2 text-gray-600 small"><button class="btn btn-primary d-block btn-user" type="submit">Logout</button></span></a>
+                <a class="btn btn-primary d-block btn-user" href="/logout">Logout</a>
             </li>
         </ul>
     </div>
