--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -27,7 +27,6 @@
                     <li class="nav-item"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>&nbsp;Analytics</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="/investment"><i class="fas fa-dollar-sign"></i><span>&nbsp;Investments</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;Profile</span></a>
-                    <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-user-circle"></i><span>&nbsp;Logout</span></a>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
@@ -44,9 +43,7 @@
                             
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="nav-link" href="/logout"><span class="d-none d-lg-inline me-2 text-gray-600 small">Logout</span><img class="border rounded-circle img-profile" src="../assets/img/avatars/avatar1.jpeg"></a>
-                                    
-                                </div>
+                                <a class="btn btn-primary d-block btn-user" href="/logout">Logout</a>
                             </li>
                         </ul>
                     </div>
