--- a/src/main/resources/static/analytics/analytics.html
+++ b/src/main/resources/static/analytics/analytics.html
@@ -22,7 +22,7 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link" href="/customer"><i class="fas fa-tachometer-alt"></i><span>&nbsp;Dashboard</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/dashboard"><i class="fas fa-tachometer-alt"></i><span>&nbsp;Dashboard</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/expense"><i class="fas fa-user"></i><span>&nbsp;Expenses</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/category"><i class="fas fa-table"></i><span>&nbsp;Categories</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="/analytics"><i class="far fa-user-circle"></i><span>&nbsp;Analytics</span></a></li>
