--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -84,7 +84,7 @@
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
-                    <div class="text-center my-auto copyright"><span>ExpenseTracker by Nico Born, Laurent Zeugin, Marino Bottacin, Kenan Ahmetasevic</span></div>
+                    <div class="text-center my-auto copyright"><span>ExpenseTracker by Nico Born, Laurent Zeugin, Marino Bottacin</span></div>
                 </div>
             </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
