--- a/src/main/resources/static/user/profile.html
+++ b/src/main/resources/static/user/profile.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="/expense"><i class="fas fa-user"></i><span>&nbsp;Expenses</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/category"><i class="fas fa-table"></i><span>&nbsp;Categories</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/investment"><i class="fas fa-dollar-sign"></i><span>&nbsp;Investments</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>&nbsp;Analytics</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/analytics"><i class="far fa-user-circle"></i><span>&nbsp;Analytics</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;Profile</span></a>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
