--- a/src/main/resources/static/analytics/analytics.html
+++ b/src/main/resources/static/analytics/analytics.html
@@ -126,7 +126,7 @@
                 <div class="container-fluid">
                     <div class="card shadow">
                         <div class="card-header py-3">
-                            <p class="text-primary m-0 fw-bold">Expense analytics</p>
+                            <p class="text-primary m-0 fw-bold">Investment analytics</p>
                         </div>
                         <div class="card-body">
                             <div class="row">
